2007-11-09  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, SACrashReporter crashes when Library/CrashReporter directory doesn't exist.

2007-11-05  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, exceptions from Socket.getaddrinfo should be caught.

2007-11-04  Satoshi Nakagawa <artension@gmail.com>

	Updated SACrashReporter.

2007-11-04  Satoshi Nakagawa <artension@gmail.com>

	Updated and enabled SACrashReporter.
	Thanks to Eloy Duran.

2007-11-01  Satoshi Nakagawa <artension@gmail.com>

	Trying to integrate SACrashReporter.
	Thanks to Eloy Duran.

2007-11-01  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, data source of OutlineView should return kind of NSObject.

2007-10-31  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, double clicks on the console log didn't work.

2007-10-31  Satoshi Nakagawa <artension@gmail.com>

	Added cmd+alt+(up|down) as shortcut keys for moving channels.

2007-10-31  Satoshi Nakagawa <artension@gmail.com>

	Changed shortcut keys for moving servers from cmd+(left|right) to cmd+alt+(left|right).

2007-10-31  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, location of the caret is out of range after pushed up and down keys on the edit.
	Changed regex patterns for URLs and addresses.
	Changed to make cmd+left and cmd+right working for moving the cursor when there is only a server.

2007-10-28  Satoshi Nakagawa <artension@gmail.com>

	Prepared to alternate lines.

2007-10-26  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, regex pattern for IP addresses passed over .al, .cl, .gl, .il, .ml, .nl, .pl, .sl.

2007-10-24  Satoshi Nakagawa <artension@gmail.com>

	Changed to allow lossy encoding conversions.

2007-10-24  Satoshi Nakagawa <artension@gmail.com>

	Changed to run GC after 10 minutes idle.
	Fixed a bug, a scrollback mark in the head of log should be erased when the number of log lines gets greater than threshold.

2007-10-24  Satoshi Nakagawa <artension@gmail.com>
